--- a/index.html
+++ b/index.html
@@ -2,272 +2,364 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Picgoy - AI Image Generator</title>
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<title>Picgoy – AI Image Generator</title>
+
+<!-- PWA manifest -->
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#00e0ff">
 
 <style>
-:root {
-  --bg:#eef2f7;
-  --glass:rgba(255,255,255,0.25);
-  --border:rgba(255,255,255,0.4);
-  --text:#222;
-  --btn:rgba(76,175,80,0.75);
-  --blur:14px;
+:root{
+  --bg:rgba(255,255,255,.18);
+  --border:rgba(255,255,255,.3);
+  --txt:#000;
 }
-[data-theme="dark"]{
-  --bg:#121212;
-  --glass:rgba(40,40,40,0.55);
-  --border:rgba(255,255,255,0.15);
-  --text:#f5f5f5;
-  --btn:rgba(33,150,243,0.75);
+body.dark{
+  --bg:rgba(0,0,0,.45);
+  --border:rgba(255,255,255,.15);
+  --txt:#fff;
+  background:#000;
 }
-
-*{box-sizing:border-box}
 body{
   margin:0;
-  min-height:100vh;
-  background:var(--bg);
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-family:Arial,sans-serif;
-  padding:12px;
+  font-family:system-ui,-apple-system;
+  background:linear-gradient(135deg,#00f0ff,#0077ff);
+  color:var(--txt);
 }
-
-/* APP FRAME */
-.app{
-  width:100%;
-  max-width:520px;
-  background:var(--glass);
-  backdrop-filter:blur(var(--blur));
-  border:1px solid var(--border);
+.app-frame{
+  max-width:420px;
+  margin:12px auto;
+  padding:14px;
   border-radius:22px;
-  padding:18px 14px 20px;
-  color:var(--text);
-  display:flex;
-  flex-direction:column;
-  align-items:center;
+  backdrop-filter:blur(18px);
+  background:var(--bg);
+  border:1px solid var(--border);
   position:relative;
 }
+h1{text-align:center;margin:8px 0 14px}
+.segment{margin-bottom:16px}
+.segment h3{margin:6px 0;font-size:14px;opacity:.7}
 
-/* DARK MODE */
-.toggle{
-  position:absolute;
-  top:14px;
-  right:14px;
-  width:40px;
-  height:40px;
-  border-radius:50%;
-  border:none;
-  background:var(--btn);
-  color:#fff;
-  font-size:18px;
-  cursor:pointer;
-}
-
-h1{
-  margin:6px 0 14px;
-  font-size:1.6rem;
-}
-
-/* INPUTS */
-.row{
+textarea,select,input[type=range]{
   width:100%;
+  padding:12px;
+  border-radius:14px;
+  border:1px solid var(--border);
+  background:transparent;
+  color:var(--txt);
+  font-size:14px;
+  box-sizing:border-box;
+}
+
+.segment label{
+  display:block;
+  font-size:12px;
+  margin-top:8px;
+  margin-bottom:2px;
+}
+
+.btn-row{
   display:flex;
+  flex-wrap:wrap;
   gap:8px;
-  margin-bottom:10px;
-}
-
-input,select,button{
-  width:100%;
-  padding:11px;
-  border-radius:16px;
-  border:none;
-  background:rgba(255,255,255,0.25);
-  backdrop-filter:blur(var(--blur));
-  font-size:16px;
-  color:var(--text);
 }
 
 button{
-  background:var(--btn);
-  color:#fff;
+  border:none;
+  border-radius:12px;
+  padding:8px 12px;
+  background:#fff;
   cursor:pointer;
 }
 
-/* BUTTON LINES */
-.line{
-  width:100%;
-  display:flex;
-  gap:8px;
-  overflow-x:auto;
-  margin-bottom:10px;
+.toggle{
+  position:absolute;
+  top:10px;
+  right:10px;
+  width:38px;
+  height:38px;
+  border-radius:50%;
 }
-.line button{flex:0 0 auto}
 
-/* GALLERY */
-#gallery{
+.sticky-bar{
+  position:sticky;
+  bottom:0;
+  padding:10px;
+}
+.sticky-bar button{
   width:100%;
+  max-width:420px;
+  margin:auto;
+  display:block;
+  padding:16px;
+  border-radius:999px;
+  font-size:16px;
+  background:#00e0ff;
+}
+
+.gallery{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
-  gap:10px;
-  margin-top:10px;
+  grid-template-columns:repeat(2,1fr);
+  gap:8px;
 }
-.card{
-  background:var(--glass);
-  padding:8px;
-  border-radius:16px;
-  text-align:center;
+.gallery-item{
+  position:relative;
 }
-.card img{
+.gallery-item img{
   width:100%;
   border-radius:14px;
+  cursor:pointer;
 }
-
-/* SPINNER */
-#spinner{
-  display:none;
-  position:fixed;
-  width:60px;
-  height:60px;
-  border:6px solid rgba(255,255,255,0.3);
-  border-top:6px solid var(--btn);
-  border-radius:50%;
-  animation:spin 1s linear infinite;
-  z-index:999;
+.save-btn{
+  position:absolute;
+  bottom:4px;
+  padding:2px 6px;
+  border-radius:6px;
+  font-size:12px;
+  cursor:pointer;
 }
-@keyframes spin{to{transform:rotate(360deg)}}
+.save-btn.save{
+  right:4px;
+  background:#00e0ff;
+  color:#fff;
+}
+.save-btn.delete{
+  right:50px;
+  background:#ff4d4d;
+  color:#fff;
+}
 
 footer{
-  margin-top:14px;
-  font-size:13px;
   text-align:center;
+  font-size:12px;
+  opacity:.6;
+  padding:14px 0 90px;
 }
 </style>
 </head>
 
-<body data-theme="light">
+<body>
 
-<div class="app">
-
-<button class="toggle" id="themeBtn">🌙</button>
+<div class="app-frame">
+<button class="toggle" onclick="toggleDark()">🌙</button>
 <h1>Picgoy</h1>
 
-<div class="row">
-  <input id="prompt" placeholder="Describe the image...">
+<!-- PROMPT -->
+<div class="segment">
+<h3>Enter Prompt</h3>
+<textarea id="prompt" rows="3" placeholder="a car in jungle, photorealistic"></textarea>
 </div>
 
-<div class="row">
-  <button id="generateBtn">Generate</button>
-  <button id="resetBtn">Reset</button>
+<!-- PRESETS -->
+<div class="segment">
+<h3>Presets</h3>
+<div class="btn-row">
+<button onclick="togglePreset('photorealistic')">Photorealistic</button>
+<button onclick="togglePreset('cinematic lighting')">Cinematic</button>
+<button onclick="togglePreset('anime style')">Anime</button>
+<button onclick="togglePreset('fantasy art')">Fantasy</button>
+<button onclick="togglePreset('ultra detailed')">Ultra Detail</button>
+</div>
 </div>
 
-<!-- PRESET BUTTONS -->
-<div class="line">
-  <button data-preset="Fantasy landscape">Fantasy</button>
-  <button data-preset="Cartoon character">Cartoon</button>
-  <button data-preset="Cyberpunk city">Cyberpunk</button>
-  <button data-preset="Space adventure">Space</button>
-  <button data-preset="Photorealistic">Photorealistic</button>
-  <button data-preset="Surreal landscape">Surreal</button>
-  <button data-preset="Futuristic city">Futuristic</button>
-  <button data-preset="Mythical creature">Mythical</button>
-  <button data-preset="Abstract art">Abstract</button>
+<!-- STYLES -->
+<div class="segment">
+<h3>Styles</h3>
+<div class="btn-row">
+<button onclick="toggleStyle('ambient occlusion')">AO</button>
+<button onclick="toggleStyle('hyperrealistic')">Hyperreal</button>
+<button onclick="toggleStyle('high octane render')">Octane</button>
+<button onclick="toggleStyle('dramatic shadows')">Shadows</button>
+<button onclick="toggleStyle('studio lighting')">Studio</button>
+</div>
 </div>
 
-<!-- STYLE BUTTONS -->
-<div class="line">
-  <button data-style="Anime">Anime</button>
-  <button data-style="Watercolor">Watercolor</button>
-  <button data-style="Photorealistic">Photo</button>
-  <button data-style="Pixel art">Pixel</button>
-  <button data-style="Cyberpunk">Cyberpunk</button>
-  <button data-style="Oil painting">Oil</button>
-  <button data-style="Minimalist">Minimalist</button>
-  <button data-style="Neon Cyberpunk">Neon Cyberpunk</button>
-  <button data-style="Retro/Vaporwave">Vaporwave</button>
-  <button data-style="Low poly">Low Poly</button>
+<!-- STYLE WEIGHT SLIDERS -->
+<div class="segment">
+<h3>Style Weight</h3>
+<label>AO Intensity: <span id="aoVal">50</span></label>
+<input type="range" id="aoSlider" min="0" max="100" value="50" oninput="document.getElementById('aoVal').innerText=this.value">
+<label>Exposure Strength: <span id="expVal">50</span></label>
+<input type="range" id="expSlider" min="0" max="100" value="50" oninput="document.getElementById('expVal').innerText=this.value">
 </div>
 
-<div class="row">
-  <select id="ratio">
-    <option value="1:1">1:1</option>
-    <option value="16:9">16:9</option>
-    <option value="9:16">9:16</option>
-  </select>
-  <select id="size">
-    <option value="512">512px</option>
-    <option value="768">768px</option>
-    <option value="1024">1024px</option>
-  </select>
+<!-- ASPECT RATIO -->
+<div class="segment">
+<h3>Aspect Ratio</h3>
+<select id="ratio">
+<option value="1:1">1:1 (Square)</option>
+<option value="16:9">16:9 (Landscape)</option>
+<option value="9:16">9:16 (Portrait)</option>
+<option value="4:5">4:5</option>
+</select>
 </div>
 
-<div id="gallery"></div>
+<!-- IMAGE SIZE -->
+<div class="segment">
+<h3>Image Size</h3>
+<select id="imgSize">
+<option value="384">Small (384px)</option>
+<option value="512" selected>Medium (512px)</option>
+<option value="768">Large (768px)</option>
+<option value="1024">XL (1024px)</option>
+</select>
+</div>
+
+<!-- OUTPUT -->
+<div class="segment">
+<h3>Generated Image</h3>
+<img id="output" style="width:100%;border-radius:16px;display:none">
+</div>
+
+<!-- GALLERY -->
+<div class="segment">
+<h3>Image Gallery</h3>
+<div class="gallery" id="gallery"></div>
+</div>
+
+</div>
+
+<!-- Sticky Generate Button -->
+<div class="sticky-bar">
+<button onclick="generate()">Generate Image</button>
+</div>
+
+<!-- Install PWA Button -->
+<button id="installBtn" style="position:fixed;bottom:80px;right:10px;padding:10px;border-radius:12px;background:#00e0ff;color:#fff;display:none;">Install Picgoy</button>
+
 <footer>© Manik Roy 2025. All Rights Reserved.</footer>
-</div>
-
-<div id="spinner"></div>
 
 <script>
-const promptInput=document.getElementById("prompt");
-const gallery=document.getElementById("gallery");
-const spinner=document.getElementById("spinner");
-const ratio=document.getElementById("ratio");
-const size=document.getElementById("size");
-const themeBtn=document.getElementById("themeBtn");
+let presets=[], styles=[];
 
-let style="";
+// Dark mode toggle
+function toggleDark(){
+  document.body.classList.toggle('dark');
+}
 
-/* PRESETS */
-document.querySelectorAll("[data-preset]").forEach(b=>{
-  b.onclick=()=>promptInput.value=b.dataset.preset;
-});
-document.querySelectorAll("[data-style]").forEach(b=>{
-  b.onclick=()=>style=b.dataset.style;
-});
+// Toggle preset ON/OFF
+function togglePreset(p){
+  if(presets.includes(p)){
+    presets = presets.filter(x=>x!==p);
+  } else {
+    presets.push(p);
+    checkConflicts();
+  }
+  updatePrompt();
+}
 
-/* GENERATE */
-document.getElementById("generateBtn").onclick=()=>{
-  if(!promptInput.value) return alert("Enter a prompt");
-  spinner.style.display="block";
+// Toggle style ON/OFF
+function toggleStyle(s){
+  if(styles.includes(s)){
+    styles = styles.filter(x=>x!==s);
+  } else {
+    styles.push(s);
+    checkConflicts();
+  }
+  updatePrompt();
+}
 
-  const [w,h]=ratio.value.split(":");
-  const base=+size.value;
-  const height=Math.round(base*(h/w));
-  const text=promptInput.value+(style?` in ${style} style`:"");
+// Update prompt without overwriting manual text
+function updatePrompt(){
+  const base = document.getElementById("prompt").value.split(",").map(t=>t.trim()).filter(t=>t.length>0);
+  const combined = Array.from(new Set([...base, ...presets, ...styles]));
+  document.getElementById("prompt").value = combined.join(", ");
+}
 
-  const url=`https://image.pollinations.ai/prompt/${encodeURIComponent(text)}?width=${base}&height=${height}`;
+// Conflict detection
+function checkConflicts(){
+  if(styles.includes('hyperrealistic') && styles.includes('minimal')){
+    alert("Conflict detected: 'hyperrealistic' + 'minimal'");
+  }
+}
 
-  const img=new Image();
+// Aspect ratio + size calculation
+function calculateSize(ratio,base){
+  let w=base,h=base;
+  if(ratio==="16:9"){w=base;h=Math.round(base*9/16);}
+  if(ratio==="9:16"){h=base;w=Math.round(base*9/16);}
+  if(ratio==="4:5"){w=base;h=Math.round(base*5/4);}
+  return {w,h};
+}
+
+// Generate image
+function generate(){
+  const basePrompt=document.getElementById("prompt").value.trim();
+  if(!basePrompt){alert("Enter a prompt");return;}
+
+  const full=[basePrompt,...presets,...styles].join(", ");
+  const ratio=document.getElementById("ratio").value;
+  const base=parseInt(document.getElementById("imgSize").value);
+  const {w,h}=calculateSize(ratio,base);
+
+  const ao=document.getElementById("aoSlider").value;
+  const exp=document.getElementById("expSlider").value;
+
+  const url=`https://image.pollinations.ai/prompt/${encodeURIComponent(full)}?width=${w}&height=${h}`;
+
+  const img=document.getElementById("output");
   img.src=url;
-  img.onload=()=>{
-    spinner.style.display="none";
-    gallery.innerHTML=`
-      <div class="card">
-        <img src="${url}">
-        <button onclick="download('${url}')">Download</button>
-      </div>`+gallery.innerHTML;
+  img.style.display="block";
+  img.onload=()=>addToGallery(url);
+}
+
+// Add image to gallery with save and delete buttons
+function addToGallery(src){
+  const g=document.getElementById("gallery");
+  const container=document.createElement("div");
+  container.className='gallery-item';
+
+  const im=document.createElement("img");
+  im.src=src;
+  im.onclick=()=>window.open(src,"_blank");
+
+  const saveBtn=document.createElement("button");
+  saveBtn.innerText="Save";
+  saveBtn.className="save-btn save";
+  saveBtn.onclick=(e)=>{
+    e.stopPropagation();
+    const a=document.createElement('a');
+    a.href=src;
+    a.download="Picgoy.png";
+    a.click();
   };
-  img.onerror=()=>{spinner.style.display="none";alert("Generation failed");}
-};
 
-/* RESET */
-document.getElementById("resetBtn").onclick=()=>{
-  promptInput.value="";
-  style="";
-  gallery.innerHTML="";
-};
+  const delBtn=document.createElement("button");
+  delBtn.innerText="Delete";
+  delBtn.className="save-btn delete";
+  delBtn.onclick=(e)=>{
+    e.stopPropagation();
+    container.remove();
+  };
 
-/* THEME */
-themeBtn.onclick=()=>{
-  document.body.dataset.theme=
-    document.body.dataset.theme==="light"?"dark":"light";
-  themeBtn.textContent=document.body.dataset.theme==="dark"?"☀️":"🌙";
-};
+  container.appendChild(im);
+  container.appendChild(saveBtn);
+  container.appendChild(delBtn);
+  g.prepend(container);
+}
 
-function download(u){
-  const a=document.createElement("a");
-  a.href=u;a.download="picgoy.png";a.click();
+// PWA Install button
+let deferredPrompt;
+const installBtn = document.getElementById('installBtn');
+
+window.addEventListener('beforeinstallprompt', (e)=>{
+  e.preventDefault();
+  deferredPrompt = e;
+  installBtn.style.display = 'block';
+});
+
+installBtn.addEventListener('click', async ()=>{
+  installBtn.style.display = 'none';
+  deferredPrompt.prompt();
+  deferredPrompt = null;
+});
+
+// Register service worker
+if('serviceWorker' in navigator){
+  navigator.serviceWorker.register('sw.js')
+    .then(()=>console.log('Service Worker Registered'))
+    .catch(err=>console.log('SW registration failed:', err));
 }
 </script>
 
