--- a/index.html
+++ b/index.html
@@ -82,26 +82,34 @@ button{
   border-radius:50%;
 }
 
+/* Sticky buttons inside app frame */
 .sticky-bar{
-  position:sticky;
-  bottom:0;
-  padding:10px;
+  display:flex;
+  gap:8px;
+  margin-top:10px;
+  justify-content:center;
 }
 .sticky-bar button{
-  width:100%;
-  max-width:420px;
-  margin:auto;
-  display:block;
-  padding:16px;
-  border-radius:999px;
+  flex:1;
+  padding:12px;
+  border-radius:24px;
   font-size:16px;
   background:#00e0ff;
+  min-width:120px;
+}
+.sticky-bar button.reset{
+  background:#ff4d4d;
+  color:#fff;
 }
 
+/* Gallery */
 .gallery{
   display:grid;
   grid-template-columns:repeat(2,1fr);
   gap:8px;
+  max-height:300px; 
+  overflow-y:auto;
+  margin-bottom:16px;
 }
 .gallery-item{
   position:relative;
@@ -128,6 +136,11 @@ button{
   right:50px;
   background:#ff4d4d;
   color:#fff;
+}
+
+/* Progress Bar */
+#progressBar{
+  transition: width 0.2s ease;
 }
 
 footer{
@@ -160,6 +173,10 @@ footer{
 <button onclick="togglePreset('anime style')">Anime</button>
 <button onclick="togglePreset('fantasy art')">Fantasy</button>
 <button onclick="togglePreset('ultra detailed')">Ultra Detail</button>
+<button onclick="togglePreset('minimal')">Minimal</button>
+<button onclick="togglePreset('vibrant colors')">Vibrant</button>
+<button onclick="togglePreset('concept art')">Concept Art</button>
+<button onclick="togglePreset('digital painting')">Digital Painting</button>
 </div>
 </div>
 
@@ -172,6 +189,10 @@ footer{
 <button onclick="toggleStyle('high octane render')">Octane</button>
 <button onclick="toggleStyle('dramatic shadows')">Shadows</button>
 <button onclick="toggleStyle('studio lighting')">Studio</button>
+<button onclick="toggleStyle('exposure compensation -3')">Exposure -3</button>
+<button onclick="toggleStyle('soft focus')">Soft Focus</button>
+<button onclick="toggleStyle('bokeh')">Bokeh</button>
+<button onclick="toggleStyle('vintage')">Vintage</button>
 </div>
 </div>
 
@@ -206,10 +227,17 @@ footer{
 </select>
 </div>
 
+<!-- PROGRESS BAR -->
+<div class="segment" id="progressContainer" style="display:none;">
+  <div style="background:#ccc;border-radius:12px;height:12px;width:100%;">
+    <div id="progressBar" style="background:#00e0ff;height:12px;width:0%;border-radius:12px;"></div>
+  </div>
+</div>
+
 <!-- OUTPUT -->
 <div class="segment">
 <h3>Generated Image</h3>
-<img id="output" style="width:100%;border-radius:16px;display:none">
+<img id="output" style="width:100%;border-radius:16px;display:none" onclick="this.style.display='none'">
 </div>
 
 <!-- GALLERY -->
@@ -218,12 +246,13 @@ footer{
 <div class="gallery" id="gallery"></div>
 </div>
 
-</div>
-
-<!-- Sticky Generate Button -->
+<!-- Sticky Generate + Reset Buttons inside app frame -->
 <div class="sticky-bar">
 <button onclick="generate()">Generate Image</button>
+<button class="reset" onclick="resetApp()">Reset</button>
 </div>
+
+</div> <!-- end app-frame -->
 
 <!-- Install PWA Button -->
 <button id="installBtn" style="position:fixed;bottom:80px;right:10px;padding:10px;border-radius:12px;background:#00e0ff;color:#fff;display:none;">Install Picgoy</button>
@@ -234,29 +263,19 @@ footer{
 let presets=[], styles=[];
 
 // Dark mode toggle
-function toggleDark(){
-  document.body.classList.toggle('dark');
-}
+function toggleDark(){ document.body.classList.toggle('dark'); }
 
 // Toggle preset ON/OFF
 function togglePreset(p){
-  if(presets.includes(p)){
-    presets = presets.filter(x=>x!==p);
-  } else {
-    presets.push(p);
-    checkConflicts();
-  }
+  if(presets.includes(p)){ presets = presets.filter(x=>x!==p); } 
+  else{ presets.push(p); checkConflicts(); }
   updatePrompt();
 }
 
 // Toggle style ON/OFF
 function toggleStyle(s){
-  if(styles.includes(s)){
-    styles = styles.filter(x=>x!==s);
-  } else {
-    styles.push(s);
-    checkConflicts();
-  }
+  if(styles.includes(s)){ styles = styles.filter(x=>x!==s); } 
+  else{ styles.push(s); checkConflicts(); }
   updatePrompt();
 }
 
@@ -283,25 +302,38 @@ function calculateSize(ratio,base){
   return {w,h};
 }
 
-// Generate image
+// Generate image with progress bar
 function generate(){
   const basePrompt=document.getElementById("prompt").value.trim();
   if(!basePrompt){alert("Enter a prompt");return;}
-
   const full=[basePrompt,...presets,...styles].join(", ");
   const ratio=document.getElementById("ratio").value;
   const base=parseInt(document.getElementById("imgSize").value);
   const {w,h}=calculateSize(ratio,base);
-
-  const ao=document.getElementById("aoSlider").value;
-  const exp=document.getElementById("expSlider").value;
-
   const url=`https://image.pollinations.ai/prompt/${encodeURIComponent(full)}?width=${w}&height=${h}`;
+  
+  // Show progress bar
+  const progressContainer = document.getElementById("progressContainer");
+  const progressBar = document.getElementById("progressBar");
+  progressContainer.style.display="block";
+  progressBar.style.width="0%";
+
+  // Animate progress bar until image loads
+  let progress = 0;
+  const interval = setInterval(()=>{
+    if(progress < 90) progress += 5; 
+    progressBar.style.width = progress + "%";
+  },100);
 
   const img=document.getElementById("output");
   img.src=url;
   img.style.display="block";
-  img.onload=()=>addToGallery(url);
+  img.onload=()=>{
+    clearInterval(interval);
+    progressBar.style.width="100%";
+    setTimeout(()=>progressContainer.style.display="none",300);
+    addToGallery(url);
+  };
 }
 
 // Add image to gallery with save and delete buttons
@@ -309,46 +341,47 @@ function addToGallery(src){
   const g=document.getElementById("gallery");
   const container=document.createElement("div");
   container.className='gallery-item';
-
   const im=document.createElement("img");
   im.src=src;
   im.onclick=()=>window.open(src,"_blank");
-
   const saveBtn=document.createElement("button");
   saveBtn.innerText="Save";
   saveBtn.className="save-btn save";
-  saveBtn.onclick=(e)=>{
-    e.stopPropagation();
-    const a=document.createElement('a');
-    a.href=src;
-    a.download="Picgoy.png";
-    a.click();
-  };
-
+  saveBtn.onclick=(e)=>{ e.stopPropagation(); const a=document.createElement('a'); a.href=src; a.download="Picgoy.png"; a.click(); };
   const delBtn=document.createElement("button");
   delBtn.innerText="Delete";
   delBtn.className="save-btn delete";
-  delBtn.onclick=(e)=>{
-    e.stopPropagation();
-    container.remove();
-  };
-
-  container.appendChild(im);
-  container.appendChild(saveBtn);
-  container.appendChild(delBtn);
+  delBtn.onclick=(e)=>{ e.stopPropagation(); container.remove(); };
+  container.appendChild(im); container.appendChild(saveBtn); container.appendChild(delBtn);
   g.prepend(container);
+}
+
+// Reset all inputs (gallery remains visible)
+function resetApp(){
+  document.getElementById('prompt').value = '';
+  presets = [];
+  styles = [];
+  document.getElementById('aoSlider').value = 50;
+  document.getElementById('aoVal').innerText = 50;
+  document.getElementById('expSlider').value = 50;
+  document.getElementById('expVal').innerText = 50;
+  document.getElementById('ratio').selectedIndex = 0;
+  document.getElementById('imgSize').selectedIndex = 1;
+
+  // Hide only generated image
+  const img = document.getElementById('output');
+  img.style.display = 'none';
+  img.src = '';
 }
 
 // PWA Install button
 let deferredPrompt;
 const installBtn = document.getElementById('installBtn');
-
 window.addEventListener('beforeinstallprompt', (e)=>{
   e.preventDefault();
   deferredPrompt = e;
   installBtn.style.display = 'block';
 });
-
 installBtn.addEventListener('click', async ()=>{
   installBtn.style.display = 'none';
   deferredPrompt.prompt();
